fixed browser compatibility

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="debug_window">
                     <div class="debug_title">
-                        <p><b>Debug Messages</b></p>
+                        <p class="debug_title_elemets">Debug Messages</p>
                     </div>
                     <div id="debug_window">
                         <div class="msg"></div>
@@ -73,7 +73,7 @@
                         <input name="keepalive" id="keepalive">
                     </div>
                 </div>
-                <div class="input_div">
+                <div class="input_div drop_dwn">
                     <label for="qos" class="label_name">
                         <span class="content_name"> QOS :</span>
                     </label>
@@ -115,7 +115,7 @@
             </div>
             <div class="sub_debug">
                 <div class="debug_title">
-                    <p><b>Subsciption<span id="activeTopic"></span></b></p>
+                    <p class="debug_title_elemets">Subsciption<b></b><span id="activeTopic"></span></b></p>
                         <button class="btn-primary unsub_btn" id='un_sub_btn'>Unsubscribe</button>
                         <i class="material-icons dwnld_btn" id="dwnld_btn" title="Download data in CSV format">get_app</i>
                 </div>
