--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="left_nav">
                 <div class="titl_div">
                     <h1 class="title">Browser <br>MQTT Client</h1>
-                    <a href="https://github.com/Akash97p/Browser_MQTT_Client" target="_blank"><img src="https://image.flaticon.com/icons/png/512/25/25231.png" class="git_img"> </a>
+                    <a href="https://github.com/Akash97p/Browser_MQTT_Client" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968810.png" class="git_img"> </a>
                 </div>
                 <div class="debug_window">
                     <div class="debug_title">
